Wed Sep 12 21:09:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* configure.in: preparing for 1.0.4
	* doc/xslt.html doc/html/*: updated and regenerated docs

Wed Sep 12 18:10:33 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/date.c: fixed some compile warnings and disabled
	  debugging by default.

Wed Sep 12 17:00:53 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* win32/dsp/libxslt.def libxslt/variables.[ch]: trying to
	  incorporate comments from bug #59220

Wed Sep 12 05:51:32 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* configure.in libexslt/date.c libexslt/Makefile.am
	  libexslt/exslt.[ch] libexslt/.cvsignore: added implementation
	  of the EXSLT - Dates and Times core functions.
	  The exsltDateFormat* functions need to be reworked but it
	  works like this, even if it's quite messy.
	* tests/exslt/strings/.cvsignore: added

Tue Sep 11 14:48:43 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: tell in usage that parameter strings
	  need to be quoted 

Tue Sep 11 13:42:49 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am libxslt/transform.c: trying to close
	  bug #60304 on xsl:fallback usage
	* tests/docs/Makefile.am tests/docs/bug-60.xml
	  tests/general/Makefile.am tests/general/bug-60.*: added a 
	  specific example in the regression tests

Tue Sep 11 13:02:34 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* tests/documents/Makefile.am tests/documents/*: changed the
	  test to use doc%5Ffile instead of doc%20file, this is 
	  sufficient to preserve the test capacities while closing
	  bug #60090

Tue Sep 11 12:33:03 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c : close #59570 by simply not providing
	  Norm's extension on FreeBSD.
	* tests/general tests/docs: added a couple of new entries
	  in the testsuite
	* libexslt/strings.c: NULL initialized a local variable
	  which was tested later on.

Mon Sep 10 22:52:44 CEST 2001 Daniel Veillard <daniel@veillard.com>
