@@ -1,3 +1,7 @@
+Thu Sep 13 15:30:01 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt.spec.in doc/Makefile.am: install xsltproc man page
+
 Wed Sep 12 21:09:53 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* configure.in: preparing for 1.0.4
